# view

./: .gitignore  Cargo.toml  Dockerfile  deploy.sh  derivation-stable.nix  derivation.nix  flake.nix
.github/workflows/: ci.yaml
nixos-module/: default.nix
view/: Cargo.toml
view-cli/: Cargo.toml
view-cli/src/: client.rs  git.rs  main.rs
view-cli/src/action/: deploy.rs  mod.rs  publish.rs
view-entity/: Cargo.toml
view-entity/src/: commit.rs  environment.rs  file.rs  lib.rs  object.rs
view-management/: Cargo.toml
view-management/src/: lib.rs
view-migration/: Cargo.toml
view-migration/src/: lib.rs  m20220101_000001_init.rs  main.rs
view-serve/: Cargo.toml
view-serve/src/: lib.rs
view/src/: main.rs
