[package]
name = "view-entity"
version = "0.0.0-git"
edition = "2021"

[dependencies]
#sea-orm = { git = 'https://github.com/SeaQL/sea-orm.git', default-features = false, features = ["with-time", "with-uuid", "macros"] }
sea-orm = { version = "0.11", default-features = false, features = ["with-time", "with-uuid", "macros"] }
time = { version = "0.3", default-features = false }
uuid = { version = "1.3", default-features = false }
