[package]
name = "view-management"
version = "0.0.0-git"
edition = "2021"

[dependencies]
axum = { version = "0.6", default-features = false, features = ["json", "macros", "multipart"] }
hex-buffer-serde = { version = "0.4", default-features = false, features = ["const_len"] }
tokio = { version = "1.28", default-features = false, features = ["fs", "io-util"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
sea-orm = { version = "0.11", default-features = false }
time = { version = "0.3", default-features = false }
hex = { version = "0.4", default-features = false }
view-entity = { path = "../view-entity" }
anyhow = "1.0"
