[package]
name = "view-migration"
version = "0.0.0-git"
edition = "2021"

[dependencies]
sea-orm-migration = { version = "0.11", default-features = false, features = ["cli", "runtime-tokio-rustls", "sqlx-postgres"] }
tokio = { version = "1.28", default-features = false, features = ["macros", "rt-multi-thread"] }
