[package]
name = "view-serve"
version = "0.0.0-git"
edition = "2021"

[dependencies]
tokio-util = { version = "0.7", default-features = false, features = ["codec"] }
hyper = { version = "0.14", default-features = false, features = ["stream"] }
tokio = { version = "1.28", default-features = false, features = ["fs"] }
futures-util = { version = "0.3", default-features = false }
mime_guess = { version = "2.0", default-features = false }
sea-orm = { version = "0.11", default-features = false }
time = { version = "0.3", default-features = false }
hex = { version = "0.4", default-features = false }
view-entity = { path = "../view-entity" }
