[package]
name = "view"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28", default-features = false, features = ["macros", "rt-multi-thread"] }
hyper = { version = "0.14", default-features = false, features = ["server", "runtime", "http1"] }
anyhow = "1.0"
tower = { version = "0.4", default-features = false, features = ["util"] }
view-serve = { path = "../view-serve" }
view-migration = { path = "../view-migration" }
view-management = { path = "../view-management" }
tower-http = { version = "0.4", default-features = false, features = ["compression-br", "compression-deflate", "compression-gzip", "compression-zstd"] }

sea-orm = { version = "0.11", default-features = false, features = ["sqlx-postgres", "runtime-tokio-rustls"] }
sea-orm-migration = { version = "0.11", default-features = false }
